12-kubernetes-05-cni/hello-world.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homework

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: homework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: echoserver
        image: k8s.gcr.io/echoserver:1.4
        imagePullPolicy: IfNotPresent
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world
  name: hello-world
  namespace: homework
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-world
  type: ClusterIP
