12-kubernetes-05-cni/my-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-policy
  namespace: homework
spec:
  podSelector:
    matchLabels:
      app: hello-world
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 178.32.0.0/16
      ports:
      - protocol: TCP
        port: 80
  egress: []
